--- a/main.html
+++ b/main.html
@@ -31,8 +31,10 @@
           <input type="number" class="quantity-input" value="1" min="1">
           <button class="increment">+</button>
         </div>
-        <button class="add-to-cart" data-name="Item 1" data-price="300">Add to Cart</button>
+        <button class="add-to-cart" data-name="Chicken Khaja Set" data-price="300" data-image="image/1.PNG">Add to Cart</button>
       </div>
+
+
       <div class="item">
         <img src="image/2.PNG" alt="Item 1">
         <h2>Mutton Khaja Set</h2>
@@ -42,7 +44,7 @@
           <input type="number" class="quantity-input" value="1" min="1">
           <button class="increment">+</button>
         </div>
-        <button class="add-to-cart" data-name="Item 1" data-price="400">Add to Cart</button>
+        <button class="add-to-cart" data-name="Mutton Khaja Set" data-price="400" data-image="image/2.PNG">Add to Cart</button>
       </div>
       <!-- Add more items for category 1 here -->
     </div>
@@ -53,50 +55,50 @@
     <div class="items-container">
       <div class="item">
         <img src="image/3.PNG" alt="Item 2">
-        <h2>Biryani</h2>
+        <h2>Panir Biryani</h2>
         <p>रु350/-</p>
         <div class="quantity">
           <button class="decrement">-</button>
           <input type="number" class="quantity-input" value="1" min="1">
           <button class="increment">+</button>
         </div>
-        <button class="add-to-cart" data-name="Item 2" data-price="350">Add to Cart</button>
+        <button class="add-to-cart" data-name="Panir Biryani" data-price="350" data-image="image/3.PNG">Add to Cart</button>
       </div>
 
       <div class="item">
         <img src="image/4.PNG" alt="Item 2">
-        <h2>Biryani</h2>
+        <h2>Veg Pulawu</h2>
         <p>रु350/-</p>
         <div class="quantity">
           <button class="decrement">-</button>
           <input type="number" class="quantity-input" value="1" min="1">
           <button class="increment">+</button>
         </div>
-        <button class="add-to-cart" data-name="Item 2" data-price="350">Add to Cart</button>
+        <button class="add-to-cart" data-name="Veg Pulawu" data-price="350" data-image="image/4.PNG">Add to Cart</button>
       </div>
 
       <div class="item">
         <img src="image/6.PNG" alt="Item 2">
-        <h2>Biryani</h2>
-        <p>रु350/-</p>
+        <h2>Samosa Tarkari</h2>
+        <p>रु90/-</p>
         <div class="quantity">
           <button class="decrement">-</button>
           <input type="number" class="quantity-input" value="1" min="1">
           <button class="increment">+</button>
         </div>
-        <button class="add-to-cart" data-name="Item 2" data-price="350">Add to Cart</button>
+        <button class="add-to-cart" data-name="Samosa Tarkari" data-price="90" data-image="image/6.PNG">Add to Cart</button>
       </div>
 
       <div class="item">
         <img src="image/4.PNG" alt="Item 2">
-        <h2>Biryani</h2>
-        <p>रु350/-</p>
+        <h2>Chaat</h2>
+        <p>रु150/-</p>
         <div class="quantity">
           <button class="decrement">-</button>
           <input type="number" class="quantity-input" value="1" min="1">
           <button class="increment">+</button>
         </div>
-        <button class="add-to-cart" data-name="Item 2" data-price="350">Add to Cart</button>
+        <button class="add-to-cart" data-name="Chaat" data-price="150" data-image="image/4.PNG">Add to Cart</button>
       </div>
       <!-- Add more items for category 2 here -->
     </div>
@@ -112,7 +114,10 @@
       </ul>
       <div id="total">Total: रु0.00</div>
       <button id="clear-cart">Clear Cart</button>
-      <button>Check out</button>
+      <button data-modal-target="crud-modal" data-modal-toggle="crud-modal"  type="button">
+        Check Out
+      </button>
+      
     </div>
   </div>
 
@@ -170,6 +175,67 @@ height: 70px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0
     </div>
 </div>
 
+
+
+
+
+
+
+
+<!-- Modal toggle -->
+
+<!-- Main modal -->
+<div id="crud-modal" tabindex="-1" aria-hidden="true" class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
+    <div class="relative p-4 w-full max-w-md max-h-full">
+        <!-- Modal content -->
+        <div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
+            <!-- Modal header -->
+            <div class="flex items-center justify-between p-4 md:p-5 border-b rounded-t dark:border-gray-600">
+                <h3 class="text-lg font-semibold text-gray-900 dark:text-white">
+                    Billing information
+                </h3>
+                <button type="button" class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white" data-modal-toggle="crud-modal">
+                    <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
+                    </svg>
+                    <span class="sr-only">Close</span>
+                </button>
+            </div>
+            <!-- Modal body -->
+            <form class="p-4 md:p-5">
+                <div class="grid gap-4 mb-4 grid-cols-2">
+                    <div class="col-span-2">
+                        <label for="name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Name</label>
+                        <input type="text" name="name" id="name" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500" placeholder="Abiral Shrestha" required="">
+                    </div>
+                    <div class="col-span-2 sm:col-span-1">
+                        <label for="price" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Phone number</label>
+                        <input type="number" name="price" id="price" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500" placeholder="98XXXXXXXX" required="">
+                    </div>
+                    <div class="col-span-2 sm:col-span-1">
+                        <label for="category" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Address</label>
+                        <select id="category" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.5 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500">
+                            <option selected="">Select Address</option>
+                            <option value="TV">Tandi Chowk</option>
+                            <option value="PC">Parsa Chowk</option>
+                            <option value="GA">Magani Chowk</option>
+                            <option value="PH">Jyamirey Chowk</option>
+                            <option value="PH">Simaltandi Chowk</option>
+                        </select>
+                    </div>
+                    <div class="col-span-2">
+                        <label for="description" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">GPS</label>
+                        <textarea id="description" rows="4" class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-600 dark:border-gray-500 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Gps"></textarea>                    
+                    </div>
+                </div>
+                <button type="submit" class="text-white inline-flex items-center bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+                    <svg class="me-1 -ms-1 w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10 5a1 1 0 011 1v3h3a1 1 0 110 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 110-2h3V6a1 1 0 011-1z" clip-rule="evenodd"></path></svg>
+                    Submit
+                </button>
+            </form>
+        </div>
+    </div>
+</div> 
 
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
