--- a/main.html
+++ b/main.html
@@ -112,7 +112,7 @@
       <ul id="cart-items">
         <!-- Cart items will be added dynamically -->
       </ul>
-      <div id="total">Total: रु0.00</div>
+      <div id="total">Total: रु 0.00/-</div>
       <button id="clear-cart">Clear Cart</button>
       <button data-modal-target="crud-modal" data-modal-toggle="crud-modal"  type="button">
         Check Out
@@ -234,6 +234,15 @@ height: 70px; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0
                     <svg class="me-1 -ms-1 w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10 5a1 1 0 011 1v3h3a1 1 0 110 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 110-2h3V6a1 1 0 011-1z" clip-rule="evenodd"></path></svg>
                     Submit
                 </button>
+
+               
+
+
+                
+
+
+
+
             </form>
         </div>
     </div>
